--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,8 @@ members = [
 [workspace.dependencies]
 log = "0.4"
 glam = "0.30"
+slotmap = "1"
+cosmic-text = { version = "0.14" }
+
+[patch.crates-io]
+cosmic-text = { path = "/Users/sys.int64/dev/lib/cosmic-text" }
