--- a/tech_paws_ui_desktop/Cargo.toml
+++ b/tech_paws_ui_desktop/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
-winit = "0.30"
+winit = { workspace = true }
 log = { workspace = true }
 slotmap = "1"
 tech_paws_ui = { path = "../tech_paws_ui" }
