--- a/tech_paws_ui_tiny_skia/Cargo.toml
+++ b/tech_paws_ui_tiny_skia/Cargo.toml
@@ -6,3 +6,5 @@ edition = "2024"
 [dependencies]
 tiny-skia = "0.11"
 softbuffer = "0.4"
+tech_paws_ui = { path = "../tech_paws_ui" }
+raw-window-handle = { workspace = true }
