--- a/tech_paws_ui_tiny_skia/Cargo.toml
+++ b/tech_paws_ui_tiny_skia/Cargo.toml
@@ -8,3 +8,4 @@ tiny-skia = "0.11"
 softbuffer = "0.4"
 tech_paws_ui = { path = "../tech_paws_ui" }
 raw-window-handle = { workspace = true }
+cosmic-text = { workspace = true }
