for_each, scope and Identifiable implementaiton; Add derive macro

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,10 +1,11 @@
 [workspace]
 resolver = "3"
 members = [
-    "tech_paws_ui",
-    "tech_paws_ui_desktop",
-    "tech_paws_ui_tiny_skia",
-    "examples/hello_world"
+    "tech-paws-ui",
+    "tech-paws-ui-desktop",
+    "tech-paws-ui-tiny-skia",
+    "tech-paws-ui-derive",
+    "examples/hello_world",
 ]
 
 [workspace.dependencies]
