--- a/tech-paws-ui-tiny-skia/Cargo.toml
+++ b/tech-paws-ui-tiny-skia/Cargo.toml
@@ -1,11 +1,11 @@
 [package]
-name = "tech_paws_ui_tiny_skia"
+name = "tech-paws-ui-tiny-skia"
 version = "0.1.0"
 edition = "2024"
 
 [dependencies]
 tiny-skia = "0.11"
 softbuffer = "0.4"
-tech_paws_ui = { path = "../tech_paws_ui" }
+tech-paws-ui = { path = "../tech-paws-ui" }
 raw-window-handle = { workspace = true }
 cosmic-text = { workspace = true }
