--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,8 @@ winit = "0.30"
 string-interner = "0.19"
 parking_lot = "0.12"
 once_cell = "1.21"
+usvg = "0.45.1"
+resvg = "0.45.1"
 
 [patch.crates-io]
 cosmic-text = { path = "/Users/sys.int64/dev/lib/cosmic-text" }
