--- a/examples/hello_world/Cargo.toml
+++ b/examples/hello_world/Cargo.toml
@@ -8,6 +8,8 @@ tech-paws-ui = { path = "../../tech-paws-ui" }
 tech-paws-ui-desktop = { path = "../../tech-paws-ui-desktop" }
 tech-paws-ui-tiny-skia = { path = "../../tech-paws-ui-tiny-skia" }
 tech-paws-ui-derive = { path = "../../tech-paws-ui-derive" }
+puffin_http = "0.16.1"
+puffin = "0.19.1"
 
 log = { workspace = true }
 winit = { workspace = true }
