--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,8 +18,12 @@ winit = "0.30"
 string-interner = "0.19"
 parking_lot = "0.12"
 once_cell = "1.21"
-usvg = "0.45.1"
-resvg = "0.45.1"
+usvg = "0.45"
+resvg = "0.45"
+bumpalo = { version = "3.19", features = ["collections"] }
+smallvec = "1.15.1"
+profiling = "1.0"
+tracy-client = "0.18.3"
 
 [patch.crates-io]
 cosmic-text = { path = "/Users/sys.int64/dev/lib/cosmic-text" }
