--- a/tech-paws-ui-desktop/Cargo.toml
+++ b/tech-paws-ui-desktop/Cargo.toml
@@ -13,6 +13,7 @@ tokio = { version = "1", features = ["rt", "sync", "time"], optional = true }
 string-interner = { workspace = true }
 parking_lot = { workspace = true }
 once_cell = { workspace = true }
+bumpalo = { workspace = true }
 
 [features]
 default = ["tokio"]
