--- a/tech-paws-ui-tiny-skia/Cargo.toml
+++ b/tech-paws-ui-tiny-skia/Cargo.toml
@@ -13,3 +13,5 @@ usvg = { workspace = true }
 resvg = { workspace = true }
 log = { workspace = true }
 glam = { workspace = true }
+profiling = { workspace = true }
+tracy-client = { workspace = true }
