--- a/tech-paws-ui-vello/Cargo.toml
+++ b/tech-paws-ui-vello/Cargo.toml
@@ -11,4 +11,6 @@ cosmic-text = { workspace = true }
 raw-window-handle = { workspace = true }
 profiling = { workspace = true }
 tracy-client = { workspace = true }
+log = { workspace = true }
+vello_svg = { version = "0.8" }
 skrifa = "0.39.0"
