--- a/tech-paws-ui/Cargo.toml
+++ b/tech-paws-ui/Cargo.toml
@@ -2,6 +2,7 @@
 name = "tech-paws-ui"
 version = "0.1.0"
 edition = "2024"
+license = "MIT OR Apache-2.0"
 
 [dependencies]
 log = { workspace = true }
