--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,13 +1,12 @@
 [workspace]
 resolver = "3"
 members = [
-    "tech-paws-ui",
-    "tech-paws-ui-desktop",
-    "tech-paws-ui-derive",
-    "tech-paws-ui-tiny-skia",
-    "tech-paws-ui-vello",
+    "clew",
+    "clew-desktop",
+    "clew-derive",
+    "clew-tiny-skia",
+    "clew-vello",
     "clew-widgets",
-    "examples/hello_world",
 ]
 
 [workspace.dependencies]
@@ -28,5 +27,4 @@ profiling = "1.0"
 tracy-client = "0.18.3"
 
 [patch.crates-io]
-# cosmic-text = { path = "/Users/sys.int64/dev/lib/cosmic-text" }
 cosmic-text = { git = "https://github.com/tech-paws/cosmic-text.git", branch = "tech_paws" }
