--- a/clew-widgets/Cargo.toml
+++ b/clew-widgets/Cargo.toml
@@ -1,10 +1,10 @@
 [package]
 name = "clew-widgets"
-version = "0.1.0"
+version = "0.0.1"
 edition = "2024"
 
 [dependencies]
 log = { workspace = true }
-tech-paws-ui = { path = "../tech-paws-ui" }
-tech-paws-ui-derive = { path = "../tech-paws-ui-derive" }
+clew = { path = "../clew" }
+clew-derive = { path = "../clew-derive" }
 profiling = { workspace = true }
