--- a/clew-vello/Cargo.toml
+++ b/clew-vello/Cargo.toml
@@ -2,10 +2,17 @@
 name = "clew-vello"
 version = "0.0.1"
 edition = "2024"
+authors = ["Andrei Kabylin <sys.int64@gmail.com>"]
+description = "GPU-accelerated renderer backend for the clew UI framework using `vello` and `wgpu`."
+license = "MIT OR Apache-2.0"
+repository = "https://github.com/sysint64/clew"
+readme = "README.md"
+keywords = ["gui", "ui", "imgui", "immediate", "renderer", "gpu"]
+categories = ["gui"]
 
 [dependencies]
 vello = "0.6.0"
-clew = { path = "../clew" }
+clew = { version = "0.0.2", path = "../clew" }
 cosmic-text = { workspace = true }
 raw-window-handle = { workspace = true }
 profiling = { workspace = true }
