--- a/clew-tiny-skia/Cargo.toml
+++ b/clew-tiny-skia/Cargo.toml
@@ -7,7 +7,7 @@ description = "Software renderer backend for the clew UI framework."
 license = "MIT OR Apache-2.0"
 repository = "https://github.com/sysint64/clew"
 readme = "README.md"
-keywords = ["gui", "ui", "imgui", "immediate", "software renderer"]
+keywords = ["gui", "ui", "imgui", "immediate", "software"]
 categories = ["gui"]
 
 [dependencies]
