Add frame; Update stateful widget API. Remove build_with_common.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,7 +21,7 @@ parking_lot = "0.12"
 once_cell = "1.21"
 usvg = "0.45"
 resvg = "0.45"
-bumpalo = { version = "3.19", features = ["collections"] }
+bumpalo = { version = "3.19", features = ["collections", "boxed"] }
 smallvec = "1.15.1"
 profiling = "1.0"
 tracy-client = "0.18.3"
