--- a/clew/Cargo.toml
+++ b/clew/Cargo.toml
@@ -27,6 +27,9 @@ rustc-hash = "2.1"
 slab = "0.4.11"
 bitvec = "1.0.1"
 clew-derive = { path = "../clew-derive" }
+strum = { workspace = true }
+strum_macros = { workspace = true }
+uuid = "1.19.0"
 
 [features]
 default = ["tokio"]
