--- a/clew/Cargo.toml
+++ b/clew/Cargo.toml
@@ -30,6 +30,9 @@ clew-derive = { path = "../clew-derive" }
 strum = { workspace = true }
 strum_macros = { workspace = true }
 uuid = "1.19.0"
+unicode-segmentation = "1.12.0"
+unicode-width = "0.2.1"
+arboard = "3.6"
 
 [features]
 default = ["tokio"]
