Port editable text from tech_paws_ui

--- a/clew/Cargo.toml
+++ b/clew/Cargo.toml
@@ -32,14 +32,16 @@ strum_macros = { workspace = true }
 uuid = "1.19.0"
 unicode-segmentation = "1.12.0"
 unicode-width = "0.2.1"
-arboard = "3.6"
+arboard = { version = "3.6", optional = true }
 
 [features]
 default = ["tokio"]
 async = ["tokio"]
+clipboard = ["arboard"]
 
 [dev-dependencies]
 tokio = { version = "1.47.1", features = ["full"] }
+clew = { path = ".", features = ["clipboard"] }
 clew-widgets = { path = "../clew-widgets" }
 clew-desktop = { path = "../clew-desktop" }
 clew-derive = { path = "../clew-derive" }
